--- a/Analyze_invoice.ipynb
+++ b/Analyze_invoice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4f160800",
+   "id": "1441fca1",
    "metadata": {},
    "source": [
     "## Analyzing Invoice and Receipts Using Textract\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c6b3d01",
+   "id": "e46ed4c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b388fc68",
+   "id": "401e6721",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "228d3c92",
+   "id": "181d415c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0eb5e6f",
+   "id": "3651f42a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c7d5324",
+   "id": "33abf357",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04361f68",
+   "id": "8e5ef163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,26 +106,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b836d99",
+   "id": "6f0ee619",
    "metadata": {},
    "source": [
-    "Let's copy some invoices and receipts to our S3 bucket. In the below cell, replace the destination bucket (my-projects-abhi-2022) with your own bucket name."
+    "Let's copy some invoices and receipts to our S3 bucket. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ad6638b",
+   "id": "69c75502",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws s3 cp ./Data s3://my-projects-abhi-2022/Textract/invoices_processing_workshop/ --recursive"
+    "!aws s3 cp ./Data s3://{s3BucketName}/Textract/invoices_processing_workshop/ --recursive"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3578d3c9",
+   "id": "30c9adc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57e21535",
+   "id": "1f609f12",
    "metadata": {},
    "source": [
     "### Using Amazon Textract AnalyzeExpense and Textract Query"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca9b5262",
+   "id": "1bebd2a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ee1e39a",
+   "id": "6ef4c24f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4852ff07",
+   "id": "769685ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e241614",
+   "id": "3f87db0b",
    "metadata": {},
    "source": [
     "The below code will output the analyze expense API result in Key:Value pair"
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ca801b9",
+   "id": "a8b5ee2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1f112c1",
+   "id": "32d9f6e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64f70e60",
+   "id": "b1de03a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8fc353e",
+   "id": "93a165dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "626c7cb7",
+   "id": "83a5f30e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b9f55c2",
+   "id": "6f3097af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf6aceea",
+   "id": "059dc9d3",
    "metadata": {},
    "source": [
     "## Analyzing Receipt"
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3447efcd",
+   "id": "5305a014",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "687498e8",
+   "id": "af734667",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ba7cabd",
+   "id": "9f900346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f0d2fa3",
+   "id": "b9e557ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c774656f",
+   "id": "77e4b200",
    "metadata": {},
    "source": [
     "Now, we will use **Textract Query** feature to extract some additional information such as Date and Merchant addresss."
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b517d52",
+   "id": "2a36cbc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00529767",
+   "id": "a06f4fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e895cbe4",
+   "id": "200c9d5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e51b457d",
+   "id": "6d8ddf28",
    "metadata": {},
    "source": [
     "### Extracting Currency from location service"
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b7709bc",
+   "id": "638a1325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a01643",
+   "id": "aa1ff8ce",
    "metadata": {},
    "source": [
     "**Before you can use Amazon location service, you need to ensure that you have added geo search access to SageMaker role**"
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b74c6b2",
+   "id": "6fe048d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "778c2b2f",
+   "id": "869957b5",
    "metadata": {},
    "source": [
     "### Let's try out another receipt.."
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c20329",
+   "id": "ffd9fc61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab5c8386",
+   "id": "a2b8dd8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c7f7beb",
+   "id": "c3239ad7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "250960e3",
+   "id": "0e728ae8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48dd576e",
+   "id": "e26f0e96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d4932c7",
+   "id": "c129fb4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e192b38f",
+   "id": "39075bf9",
    "metadata": {},
    "source": [
     "## Large scale document processing with Amazon Textract\n",
@@ -626,7 +626,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "3fd6011d",
+   "id": "cbd3a788",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c667a54e",
+   "id": "0e5e03d1",
    "metadata": {},
    "source": [
     "### Image pipeline (Use Sync APIs of Amazon Textract)\n",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0abbb86",
+   "id": "600ac6a2",
    "metadata": {},
    "source": [
     "### Image and PDF pipeline (Use Async APIs of Amazon Textract)\n",
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7637c931",
+   "id": "3f5ea4f6",
    "metadata": {},
    "source": [
     "### Steps to implement this architecture\n",
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62e476b1",
+   "id": "00e93f86",
    "metadata": {},
    "source": [
     "### Test incoming documents\n",
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53ecf8b8",
+   "id": "9b9c86b3",
    "metadata": {},
    "source": [
     "### Source code\n",
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "251cc831",
+   "id": "7f5abed5",
    "metadata": {},
    "source": [
     "## Textract Quotas"
@@ -721,7 +721,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "15a0a19a",
+   "id": "ef976ccc",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f3e355",
+   "id": "d50111fc",
    "metadata": {},
    "source": [
     "For **Transaction per second (TPS), the default quota is 1 for Singapore region**, but it can be increased upon request by simply opening a ticket using AWS console (https://ap-northeast-1.console.aws.amazon.com/servicequotas/home?region=ap-northeast-1)"
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d92f2d1",
+   "id": "9c9c2b59",
    "metadata": {},
    "source": []
   }
