--- a/Analyze_invoice.ipynb
+++ b/Analyze_invoice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "86f8a827",
+   "id": "ad0587cb",
    "metadata": {},
    "source": [
     "## Analyzing Invoice and Receipts Using Textract\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "879db755",
+   "id": "85009278",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d851720",
+   "id": "c1589d05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32981543",
+   "id": "fdf68a98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08650cad",
+   "id": "5e70ab25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78a59fce",
+   "id": "7b0d3d94",
    "metadata": {},
    "source": [
     "Let's copy some invoices and receipts to our S3 bucket. "
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9007171c",
+   "id": "165ee873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "734333a1",
+   "id": "6f55ac39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5ace7b1",
+   "id": "a184d07b",
    "metadata": {},
    "source": [
     "### Using Amazon Textract AnalyzeExpense and Textract Query"
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2005a0c",
+   "id": "6e9ca3db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c0423a6",
+   "id": "840afabf",
    "metadata": {},
    "source": [
     "Before you can call the Textract API, you will need to give necessary access to the SageMaker role to call textract APIs. Go to IAM > roles > search for your role > click on the role > `Add permission` > `Attach policies`. Find the required policies and give full access (just for this lab)."
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "440ce6b5",
+   "id": "5209b76e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60b1d9cc",
+   "id": "5b219a15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0bcff5e",
+   "id": "647f3b83",
    "metadata": {},
    "source": [
     "### Using Textract Query to extract additional information"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "915ea4dc",
+   "id": "b38cf5d9",
    "metadata": {},
    "source": [
     "We can use Textract Query to extract additional information from the document e.g. merchant address"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a25162a1",
+   "id": "6d6f1179",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e0714d3",
+   "id": "50d714c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fcb0859",
+   "id": "c314cf64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bb0de5a",
+   "id": "c9335f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c6bb47e",
+   "id": "cc02fc13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11bf1b8b",
+   "id": "f27e088f",
    "metadata": {},
    "source": [
     "## Analyzing Receipt"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcb34209",
+   "id": "94bba91f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2e88a88",
+   "id": "f8221105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f127175a",
+   "id": "0aca7a5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94519c8d",
+   "id": "1ca4db01",
    "metadata": {},
    "source": [
     "Now, we will extract the **key-value pairs** from the response_receipt"
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2537714",
+   "id": "cac0a83b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7a2a109",
+   "id": "664830b6",
    "metadata": {},
    "source": [
     "You can also use **Textract Query** feature to extract any information"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3bec3f2",
+   "id": "4aae54fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ed26b03",
+   "id": "f03b52c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a0350ac",
+   "id": "0aa55fde",
    "metadata": {},
    "source": [
     "### Let's try out another receipt.."
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5a36806",
+   "id": "59012ecb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c2b7b6f",
+   "id": "e234e45e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cf1a7ff",
+   "id": "c2614e4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91186b8a",
+   "id": "5881c869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3872e24",
+   "id": "eaee91ac",
    "metadata": {},
    "source": [
     "## Large scale document processing with Amazon Textract\n",
@@ -574,7 +574,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b23fadd4",
+   "id": "d2b0b995",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baa119c7",
+   "id": "35037840",
    "metadata": {},
    "source": [
     "### Image pipeline (Use Sync APIs of Amazon Textract)\n",
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f84d3ae",
+   "id": "8eba183e",
    "metadata": {},
    "source": [
     "### Image and PDF pipeline (Use Async APIs of Amazon Textract)\n",
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86f17fe9",
+   "id": "e8f39dc7",
    "metadata": {},
    "source": [
     "### Steps to implement this architecture\n",
@@ -623,13 +623,14 @@
     "- Next, install AWS CLI by `pip install awscli --upgrade`\n",
     "- Now clone the repo by `git clone https://github.com/aws-samples/amazon-textract-serverless-large-scale-document-processing.git`\n",
     "- In the terminal, go to the directory \"textract-pipeline\"\n",
+    "- Run `npm install`\n",
     "- Run `cdk bootstrap`\n",
     "- Run `cdk deploy`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c551bc84",
+   "id": "cd5bf6ac",
    "metadata": {},
    "source": [
     "### Test incoming documents\n",
@@ -640,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e47d36ed",
+   "id": "6db98808",
    "metadata": {},
    "source": [
     "### Source code\n",
@@ -656,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a57f619",
+   "id": "efe0e9df",
    "metadata": {},
    "source": [
     "## Textract Quotas"
@@ -669,7 +670,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "44af38fc",
+   "id": "f14d2d8f",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
@@ -677,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae8e7152",
+   "id": "5c646ec9",
    "metadata": {},
    "source": [
     "For **Transaction per second (TPS), the default quota is 1 for Singapore region**, but it can be increased upon request by simply opening a ticket using AWS console (https://ap-northeast-1.console.aws.amazon.com/servicequotas/home?region=ap-northeast-1)"
@@ -685,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dba77a2",
+   "id": "fedde95f",
    "metadata": {},
    "source": []
   }
